WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59049
WebKit2: Can't scroll page after printing on Yahoo.com and other sites
https://bugs.webkit.org/show_bug.cgi?id=59049
Summary
WebKit2: Can't scroll page after printing on Yahoo.com and other sites
Sam Weinig
Reported
2011-04-20 17:30:11 PDT
WebKit2: Can't scroll page after printing on Yahoo.com and other sites
Attachments
Patch
(1.59 KB, patch)
2011-04-20 17:33 PDT
,
Sam Weinig
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2011-04-20 17:33:19 PDT
***
Bug 59050
has been marked as a duplicate of this bug. ***
Sam Weinig
Comment 2
2011-04-20 17:33:50 PDT
Created
attachment 90457
[details]
Patch
Sam Weinig
Comment 3
2011-04-20 17:35:12 PDT
<
rdar://problem/9233291
>
Sam Weinig
Comment 4
2011-04-20 17:35:29 PDT
Committed
r84442
: <
http://trac.webkit.org/changeset/84442
>
WebKit Review Bot
Comment 5
2011-04-20 18:37:00 PDT
http://trac.webkit.org/changeset/84442
might have broken Windows 7 Release (Tests) The following tests are not passing: fast/images/animated-gif-restored-from-bfcache.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug