2011-04-20  Sam Weinig  <sam@webkit.org>

Reviewed by Anders Carlsson.

        WebKit2: Can't scroll page after printing on Yahoo.com and other sites
        <rdar://problem/9233291>
        https://bugs.webkit.org/show_bug.cgi?id=59049

        * page/Frame.cpp:
        (WebCore::Frame::setPrinting): Match Mac WebKit1 code when ending printing,
        and call forceLayout() instead of forceLayoutForPagination().


Canonical link: https://commits.webkit.org/74181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84442 268f45cc-cd09-0410-ab3c-d52691b4dbfc